# solvepde

./: CMakeLists.txt  PropagateGaussianWavePacket.cpp  README.md  cavity.py  chebyshev.py  chebyshev_1d.py  dos.jl  dos.py  fourier_transform.py  leapfrog_1d.py  maxwell_1d.py  maxwell_2d.py  runge_kutta.py  well_1d.py  well_2d.py
